[package]
name = "mpd-utils"
version = "0.1.0"
edition = "2021"
description = "Utilities for working with MPD servers, built on top of `mpd_client` and `tokio`"
license = "MIT"

[dependencies]
mpd_client = "1.1.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "time"] }
async-once-cell = "0.4.2"
tracing = "0.1.37"
futures = "0.3.27"
thiserror = "1.0.39"