[package]
name = "mpd-utils"
version = "0.2.0"
edition = "2021"
description = "Utilities for working with MPD servers, built on top of `mpd_client` and `tokio`"
license = "MIT"

[dependencies]
mpd_client = "1.3.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "time"] }
tracing = "0.1.40"
futures = "0.3.30"
thiserror = "1.0.56"